--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	============================================= -->
 	<link href="https://fonts.googleapis.com/css2?family=Lato:wght@400&family=Playfair+Display:wght@400;700&display=swap" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="/css/bootstrap.css" type="text/css" />
-	<link rel="stylesheet" href="/style.css" type="text/css" />
+	<link rel="stylesheet" href="/css/style.css" type="text/css" />
 	<link rel="stylesheet" href="/css/dark.css" type="text/css" />
 	<link rel="stylesheet" href="/css/font-icons.css" type="text/css" />
 	<link rel="stylesheet" href="/css/animate.css" type="text/css" />
