--- a/san-francisco/index.html
+++ b/san-francisco/index.html
@@ -9,7 +9,7 @@
 	============================================= -->
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700|Roboto:300,400,500,700&display=swap" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
-	<link rel="stylesheet" href="style.css" type="text/css" />
+	<link rel="stylesheet" href="css/style.css" type="text/css" />
 
 	<!-- One Page Module Specific Stylesheet -->
 	<link rel="stylesheet" href="one-page/onepage.css" type="text/css" />
